TEST_PROGRAMS/VALID/06/values.go
package val;
var x = 'a';
var y = "asd";
var z = 1.0;
var a,b = 1.,.1;
