TEST_PROGRAMS/INVALID/07/invalid_ass.go
package main
var x, y := 1, "hello word"
